refactor: use Apache Commons utils for null-safe string/collection handling
Add commons-lang3 (managed by Spring Boot), commons-collections4 4.5.0,
commons-io 2.21.0 as explicit dependencies. They were transitively pulled
in by Tika today but that's fragile across Tika upgrades.

Replace ad-hoc null/empty checks with Commons utilities throughout:

  StringUtils.isBlank / isNotBlank / lowerCase / upperCase /
  trimToEmpty / defaultString / equals / startsWith
  CollectionUtils.isEmpty
  MapUtils.emptyIfNull / getObject
  FilenameUtils.getExtension
  NumberUtils.toInt
  Validate.isTrue (for parameter ranges that are programming errors)

Files touched:
  ingestion/DocumentUploadService     — file extension + name validation
  ingestion/LocalStorageService       — sanitized extension + null filePath delete
  ingestion/DocumentParserFactory     — null/blank fileType + filePath
  ingestion/OverlappingTokenTextSplitter — Validate.isTrue for ctor checks
  config/FixedSizeBatchingStrategy    — Validate.isTrue, CollectionUtils.isEmpty
  config/StartupValidator             — null-safe trim+lowercase
  config/ApiKeyFilter                 — null-safe header equality + URI prefix
  knowledge/ChunkQueryService         — JSON parse + chunk_index extraction
  knowledge/DocumentService           — file path + KB ownership; Objects.equals
  retrieval/NoOpRerankService         — CollectionUtils.isEmpty
  retrieval/BailianRerankService      — null-safe text mapping + metadata copy
  retrieval/RetrievalService          — input validation + empty candidates

Design choice: for service-layer null/blank arg checks I use plain
'if (... isBlank()) throw new IllegalArgumentException(...)' instead of
Validate.notBlank/notNull, because those throw NullPointerException for
null inputs, which GlobalExceptionHandler maps to 500. We want bad
caller input to surface as 400 BAD_REQUEST. Validate.isTrue is fine —
it always throws IAE.

Tests: 44/44 passing.