@@ -5,6 +5,9 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.majm.rag.knowledge.dto.DocumentChunkResponse;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.collections4.MapUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.math.NumberUtils;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 
@@ -27,6 +30,9 @@ public class ChunkQueryService {
     private final ObjectMapper objectMapper;
 
     public List<DocumentChunkResponse> listByDocument(UUID documentId) {
+        if (documentId == null) {
+            throw new IllegalArgumentException("documentId is required");
+        }
         return jdbcTemplate.query(LIST_BY_DOCUMENT_SQL, (rs, rowNum) -> {
             UUID id = UUID.fromString(rs.getString("id"));
             String content = rs.getString("content");
@@ -37,19 +43,25 @@ public class ChunkQueryService {
     }
 
     public int deleteByDocument(UUID documentId) {
+        if (documentId == null) {
+            throw new IllegalArgumentException("documentId is required");
+        }
         return jdbcTemplate.update(
             "DELETE FROM vector_store WHERE metadata->>'document_id' = ?",
             documentId.toString());
     }
 
     public int deleteByKnowledgeBase(UUID knowledgeBaseId) {
+        if (knowledgeBaseId == null) {
+            throw new IllegalArgumentException("knowledgeBaseId is required");
+        }
         return jdbcTemplate.update(
             "DELETE FROM vector_store WHERE metadata->>'knowledge_base_id' = ?",
             knowledgeBaseId.toString());
     }
 
     private Map<String, Object> parseMetadata(String json) {
-        if (json == null || json.isBlank()) {
+        if (StringUtils.isBlank(json)) {
             return Map.of();
         }
         try {
@@ -60,17 +72,11 @@ public class ChunkQueryService {
     }
 
     private int parseChunkIndex(Map<String, Object> metadata) {
-        Object raw = metadata.get("chunk_index");
+        Object raw = MapUtils.getObject(metadata, "chunk_index");
         if (raw instanceof Number n) {
             return n.intValue();
         }
-        if (raw instanceof String s) {
-            try {
-                return Integer.parseInt(s);
-            } catch (NumberFormatException ignored) {
-                return 0;
-            }
-        }
-        return 0;
+        // toInt handles null and non-numeric strings, returning 0 by default.
+        return NumberUtils.toInt(raw == null ? null : raw.toString(), 0);
     }
 }
